--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Vamos a Source Control, es donde vemos los archivos que podemos llegar a controlar -->
     <h1>Hola bienvenidos a mi primera vez usando GIT</h1>
     <!-- Luego ponemos git status para verificar cuales son los archivos que no esta siguiendo (Untracked) -->
-    <!-- Y para confirmar  -->
+    <!-- Y para mandar el archivo al siguiente bloque (staying area) usamos " git add . "-->
+    <!-- Y para sellarlo en un paquete con "cinta" usamos "git commit -m "Mi primera pagina" "-->
 </body>
 </html>
