Mi primera pagina

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <!-- Luego ponemos git status para verificar cuales son los archivos que no esta siguiendo (Untracked) -->
     <!-- Y para mandar el archivo al siguiente bloque (staying area) usamos " git add . "-->
     <!-- Y para sellarlo en un paquete con "cinta" usamos "git commit -m "Mi primera pagina" "-->
+    <!-- " -m " es para enviar un mensaje para hacerle saber a tu compañero que contenido tiene el archivo-->
 </body>
 </html>
