Agrege un mensaje

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usando GIT</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <!-- VAmos a terminal, y creamos una nueva terminal -->
@@ -16,5 +17,8 @@
     <!-- Y para mandar el archivo al siguiente bloque (staying area) usamos " git add . "-->
     <!-- Y para sellarlo en un paquete con "cinta" usamos "git commit -m "Mi primera pagina" "-->
     <!-- " -m " es para enviar un mensaje para hacerle saber a tu compañero que contenido tiene el archivo-->
+    <!-- Para crear una rama se escribe, "git branch (nombre de la rama que yo quiera)" 
+    Las ramas son usualmente para crear copias -->
+    ESTE MENSAJE LO GUARDE EN PRIMER_RAMA
 </body>
 </html>
