--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <!-- Para crear una rama se escribe, "git branch (nombre de la rama que yo quiera)" 
     Las ramas son usualmente para crear copias -->
     ESTE MENSAJE LO GUARDE EN PRIMER_RAMA
+    <!-- Para ir de rama en rama, usamos "git checkout (nombre de la rama)" -->
 </body>
 </html>
