Agregando más comentarios

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     Las ramas son usualmente para crear copias -->
     ESTE MENSAJE LO GUARDE EN PRIMER_RAMA
     <!-- Para ir de rama en rama, usamos "git checkout (nombre de la rama)" -->
+    <!-- Para CREAR UNA RAMA Y IR A ESA RAMA se escribe "git checkout -b (nombre de la rama a crear)" -->
 </body>
 </html>
