--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     ESTE MENSAJE LO GUARDE EN PRIMER_RAMA
     <!-- Para ir de rama en rama, usamos "git checkout (nombre de la rama)" -->
     <!-- Para CREAR UNA RAMA Y IR A ESA RAMA se escribe "git checkout -b (nombre de la rama a crear)" -->
+    <!-- Para borrar una rama se escribe "git branch -D (nombre de la rama a eliminar)" -->
 </body>
 </html>
