Agregando aun más

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <!-- Para ir de rama en rama, usamos "git checkout (nombre de la rama)" -->
     <!-- Para CREAR UNA RAMA Y IR A ESA RAMA se escribe "git checkout -b (nombre de la rama a crear)" -->
     <!-- Para borrar una rama se escribe "git branch -D (nombre de la rama a eliminar)" -->
+    <!-- Para ver los mensajes "commits" que hicimos cuando guardamos los cambios, se usa "git log --oneline" -->
 </body>
 </html>
