--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <!-- Para CREAR UNA RAMA Y IR A ESA RAMA se escribe "git checkout -b (nombre de la rama a crear)" -->
     <!-- Para borrar una rama se escribe "git branch -D (nombre de la rama a eliminar)" -->
     <!-- Para ver los mensajes "commits" que hicimos cuando guardamos los cambios, se usa "git log --oneline" -->
+    <!-- Para FUSIONAR los cambios que tenga una rama (primer_rama) y la rama padre (master), donde guardo todo mi proyecto, utilizo EN EL REPOSITORIO PRINCIPAL "MASTER": "git merge (el nombre de la rama que tiene la informacion a pasar)" -->
 </body>
 </html>
