Información relacionada con github

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <!-- Para ver los mensajes "commits" que hicimos cuando guardamos los cambios, se usa "git log --oneline" -->
     <!-- Para moverme en vez de ramas, entre COMMITS, usar "git checkout (número de commit)" -->
     <!-- Para FUSIONAR los cambios que tenga una rama (primer_rama) y la rama padre (master), donde guardo todo mi proyecto, utilizo EN EL REPOSITORIO PRINCIPAL "MASTER": "git merge (el nombre de la rama que tiene la informacion a pasar)" -->
+    <!-- para guardar el repositorio y sus datos a github, escribir "git push -u origin master" (Origin es la clave que le pusimos para linkear el github con nuestro repositorio, y master el nombre del repositorio creado o principal.) -->
 </body>
 </html>
